add style Button and display number in correct way

--- a/src/components/Controls/controls.css
+++ b/src/components/Controls/controls.css
@@ -1,7 +1,9 @@
 .Controls {
   display: flex;
   justify-content: space-between;
-
+  margin-bottom: 15px;
+  font-weight: 600;
+  font-size: .8rem;
 }
 
 .Controls__header {
