--- a/src/components/Images/Image/image.css
+++ b/src/components/Images/Image/image.css
@@ -1,13 +1,49 @@
 .Image {
-  width: 23%;
+  border: 2px solid transparent;
+  box-shadow: 0px 1px 6px rgb(150, 150, 150);
+  margin-bottom: 25px;
   margin-right: 2%;
+  transition: border-color .3s ease;
+  width: 23%;
 }
 
-.Image img {
+.Image:hover .Image__selector {
+  opacity: 1;
+}
+
+.Image.selected {
+  border-color: rgb(13, 138, 125);
+}
+
+.Image.selected .Image__selector {
+  background-color: rgb(13, 138, 125);
+}
+
+.Image__photo {
+  height: 250px;
+  position: relative;
+}
+
+.Image__selector {
+  opacity: 0;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  cursor: pointer;
+  height: 25px;
+  left: 12px;
+  position: absolute;
+  top: 12px;
+  width: 25px;
+  transition: .3s ease;
+  transition-property: background-color, opacity;
+}
+
+.Image__photo img {
+  min-height: 100%;
   width: 100%;
   object-fit: cover;
 }
 
 .Image__description {
-
+  height: 100px;
 }
