--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,9 @@
 }
 
 body {
+  background-color: rgb(238, 238, 238);
   font-family: sans-serif;
+  font-size: 18px;
   margin: 0;
   padding: 0;
-  font-size: 18px;
 }
