--- a/src/components/Controls/controls.css
+++ b/src/components/Controls/controls.css
@@ -15,3 +15,19 @@
   justify-content: space-between;
   margin-right: 15%;
 }
+
+@media (max-width: 1000px) {
+  .Controls__buttons {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .Controls {
+    flex-direction: column;
+  }
+
+  .Controls__header {
+    margin-bottom: 15px;
+  }
+}
