--- a/src/components/Images/Image/image.css
+++ b/src/components/Images/Image/image.css
@@ -84,9 +84,10 @@
 }
 
 .Image__photo img {
-  min-height: 100%;
+  height: 100%;
   width: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 .Image__description {
